# cpt_s

./: .clang-format  .gitignore  clean
121/: 2023-08-25.c  2023-08-28.c
121/assignments/: PA1.c
121/assignments/pa2/: equations.c  equations.h  headers.h  main.c  utils.c  utils.h
121/assignments/pa3/: functions.c  headers.h  main.c
121/assignments/pa4/: functions.c  headers.h  main.c
121/assignments/pa5/: headers.h  io.c  io.h  main.c  utils.c  utils.h
121/assignments/pa6/: globals.h  headers.h  helpers.c  helpers.h  io.c  io.h  main.c  utils.c  utils.h
121/assignments/pa7/: a.out  constants.h  example_code.c  example_code.h  hand.c  hand.h  headers.h  io.c  io.h  main.c  types.h  utils.c  utils.h
121/assignments/pa8/: functions.c  headers.h  main.c
121/assignments/strings/: headers.h  input.txt  main.c  output.txt  string_processor.c
121/labs/1/: Task1.c
121/labs/2/: funcs.h  main.c  types.h
121/labs/lab1/: Task2.c
121/labs/lab2/: funcs.c  headers.h
121/lectures/: 2023-09-06.c
121/lectures/2023-09-11/: functions.c  headers.h  main.c
121/lectures/2023-09-13/: files.c  output.txt  scope.c
121/lectures/2023-09-15/: conditionals.c  files.c  input.txt  strings.c
121/lectures/2023-09-20/: functions.c  headers.h  main.c
121/lectures/2023-09-22/: loops.c
121/lectures/2023-09-25/: main.c  scores.txt
121/lectures/2023-09-27/: prompt.c  rand.c
121/lectures/2023-10-04/: functions.c  headers.h  main.c
121/lectures/2023-10-06/: functions.c  main.c
121/lectures/2023-10-11/: functions.c  headers.h  main.c
121/lectures/2023-10-13/: functions.c  headers.h  main.c
121/lectures/2023-10-16/: functions.c  headers.h  main.c
121/lectures/2023-10-18/: functions.c  headers.h  main.c
121/lectures/2023-10-20/: headers.h  main.c
121/lectures/2023-10-25/: headers.h  main.c
121/lectures/2023-10-27/: data.csv  headers.h  main.c  utils.c
121/lectures/2023-10-30/: headers.h  main.c  utils.c
121/lectures/2023-11-06/: headers.h  main.c  utils.c
121/lectures/2023-12-01/: headers.h  main.c  utils.c
121/lectures/2023-12-08/: main.c
122/assignments/: headers.h  main.c  pa9.md
122/assignments/cipher/: CMakeLists.txt
122/assignments/pa1/: FitbitData.csv  Results.csv  functions.c  headers.h  main.c
122/assignments/pa2/: .~lock.musicPlayList.csv#  CMakeLists.txt  commands.c  commands.h  functions.c  globals.h  headers.h  linked_list.c  linked_list.h  main.c  utils.c  utils.h
122/assignments/pa3/: CMakeLists.txt  commands.c  commands.h  globals.h  linked_list.c  linked_list.h  main.c  test.c  test.h  utils.h
122/assignments/pa4/: CMakeLists.txt  dietPlans.txt  exercisePlans.txt  fitnessappwrapper.cpp  fitnessappwrapper.hpp  main.cpp  plan.cpp  plan.hpp  utils.cpp  utils.hpp  wrapper.hpp
122/assignments/pa5/: CMakeLists.txt  data.cpp  data.hpp  main.cpp  queue.cpp  queue.hpp  queuenode.cpp  queuenode.hpp  simulation.cpp  simulation.hpp  tests.cpp  tests.hpp
122/assignments/pa6/: CMakeLists.txt
122/assignments/pa6/data/: Convert.txt  InverseConvert.txt  InverseMorseTable.txt  MorseTable.txt
122/assignments/pa6/includes/: bst.hpp  bstnode.hpp  morsecode.hpp
122/assignments/pa6/src/: main.cpp  morsecode.cpp
122/assignments/pa7/: CMakeLists.txt
122/assignments/pa7/includes/: app.hpp  config.hpp  data.hpp  list.hpp  menu.hpp  node.hpp  stack.hpp  utils.hpp
122/assignments/pa7/src/: app.cpp  data.cpp  main.cpp  menu.cpp  utils.cpp
122/assignments/pa8/: CMakeLists.txt
122/labs/lab11/: CMakeLists.txt
122/labs/lab12/: CMakeLists.txt
122/labs/lab2/: contacts.csv  functions.c  headers.h  main.c  saved.csv
122/labs/lab9/: CMakeLists.txt
122/labs/lab9/data/: input1.txt  input2.txt  input3.txt
122/labs/lab9/includes/: converter.hpp  evaluator.hpp  stack.hpp  teststack.hpp
122/labs/lab9/src/: converter.cpp  evaluator.cpp  main.cpp
122/labs/sfml-test/: CMakeLists.txt  shell.nix
122/labs/sfml-test/src/: main.cpp
223/homework/: .gitignore  hw1.tex  hw2.tex  hw3.tex  hw4.tex  hw5.typ  shell.nix
223/homework_tex/: .gitignore  hw4.tex
(+305 files in other folders)
